Migrate LoginFragment to Compose

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -86,5 +86,5 @@
     <string name="only_hidden">Скрытые игры</string>
     <string name="change_scale">Изменить масштаб</string>
     <string name="library_search_hint">Название игры</string>
-    <string name="login_privacy_hint">Для работы приложения вам нужно сделать открытым <b>Доступ к игровой информации</b> и выключить опцию <b>Скрывать общее время в игре, даже если видны другие данные об играх</b> в <b>Настройках приватности</b> вашего профиля Steam</string>
+    <string name="login_privacy_hint"><![CDATA[Для работы приложения вам нужно сделать открытым <b>Доступ к игровой информации</b> и выключить опцию <b>Скрывать общее время в игре, даже если видны другие данные об играх</b> в <b>Настройках приватности</b> вашего профиля Steam]]></string>
 </resources>
